ChessV.Compiler/ChessVCParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ChessVC.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class ChessVCParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, LINE_COMMENT=50, COMMENT=51, WHITESPACE=52, 
		ATTRIBUTE=53, IDENTIFIER=54, CHAR=55, STRING=56, INTEGER=57;
	public const int
		RULE_unit = 0, RULE_declaration = 1, RULE_pieceTypeDeclaration = 2, RULE_gameDeclaration = 3, 
		RULE_declMember = 4, RULE_constructorAssign = 5, RULE_functionDefn = 6, 
		RULE_memberDefn = 7, RULE_lambdaprimary = 8, RULE_lambdaexpr = 9, RULE_simpleEmbeddedStatement = 10, 
		RULE_embeddedStatement = 11, RULE_statement = 12, RULE_statementList = 13, 
		RULE_block = 14, RULE_ifBody = 15, RULE_variableDeclaration = 16, RULE_primaryExpr = 17, 
		RULE_postfixExpr = 18, RULE_unaryExpr = 19, RULE_multiplicativeExpr = 20, 
		RULE_additiveExpr = 21, RULE_relationalExpr = 22, RULE_equalityExpr = 23, 
		RULE_conditionalAndExpr = 24, RULE_conditionalOrExpr = 25, RULE_conditionalExpr = 26, 
		RULE_assignmentExpr = 27, RULE_expression = 28, RULE_argumentList = 29, 
		RULE_argument = 30, RULE_predefinedType = 31, RULE_identifier = 32, RULE_literal = 33;
	public static readonly string[] ruleNames = {
		"unit", "declaration", "pieceTypeDeclaration", "gameDeclaration", "declMember", 
		"constructorAssign", "functionDefn", "memberDefn", "lambdaprimary", "lambdaexpr", 
		"simpleEmbeddedStatement", "embeddedStatement", "statement", "statementList", 
		"block", "ifBody", "variableDeclaration", "primaryExpr", "postfixExpr", 
		"unaryExpr", "multiplicativeExpr", "additiveExpr", "relationalExpr", "equalityExpr", 
		"conditionalAndExpr", "conditionalOrExpr", "conditionalExpr", "assignmentExpr", 
		"expression", "argumentList", "argument", "predefinedType", "identifier", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'PieceType'", "'{'", "'}'", "'Game'", "':'", "'='", "';'", "'true'", 
		"'false'", "'('", "')'", "'.'", "'+'", "'-'", "'<'", "'>'", "'<='", "'>='", 
		"'=='", "'!='", "'&&'", "'||'", "'if'", "'else'", "'return'", "'var'", 
		"'local'", "'['", "']'", "'++'", "'--'", "'!'", "'*'", "'/'", "'%'", "'?'", 
		"'+='", "'-='", "','", "'Int'", "'IntRange'", "'String'", "'Bool'", "'Choice'", 
		"'..'", "'MirrorSymmetry'", "'RotationalSymmetry'", "'NoSymmetry'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "LINE_COMMENT", "COMMENT", "WHITESPACE", "ATTRIBUTE", "IDENTIFIER", 
		"CHAR", "STRING", "INTEGER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ChessVC.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ChessVCParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ChessVCParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ChessVCParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class UnitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		public UnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitUnit(this);
		}
	}

	[RuleVersion(0)]
	public UnitContext unit() {
		UnitContext _localctx = new UnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_unit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0 || _la==T__3) {
				{
				{
				State = 68;
				declaration();
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GameDeclarationContext gameDeclaration() {
			return GetRuleContext<GameDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PieceTypeDeclarationContext pieceTypeDeclaration() {
			return GetRuleContext<PieceTypeDeclarationContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaration);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				gameDeclaration();
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75;
				pieceTypeDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PieceTypeDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclMemberContext[] declMember() {
			return GetRuleContexts<DeclMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclMemberContext declMember(int i) {
			return GetRuleContext<DeclMemberContext>(i);
		}
		public PieceTypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pieceTypeDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterPieceTypeDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitPieceTypeDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public PieceTypeDeclarationContext pieceTypeDeclaration() {
		PieceTypeDeclarationContext _localctx = new PieceTypeDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_pieceTypeDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(T__0);
			State = 79;
			identifier();
			State = 80;
			Match(T__1);
			State = 84;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18048483369943040L) != 0)) {
				{
				{
				State = 81;
				declMember();
				}
				}
				State = 86;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 87;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GameDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext[] identifier() {
			return GetRuleContexts<IdentifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier(int i) {
			return GetRuleContext<IdentifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclMemberContext[] declMember() {
			return GetRuleContexts<DeclMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclMemberContext declMember(int i) {
			return GetRuleContext<DeclMemberContext>(i);
		}
		public GameDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gameDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterGameDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitGameDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public GameDeclarationContext gameDeclaration() {
		GameDeclarationContext _localctx = new GameDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_gameDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(T__3);
			State = 90;
			identifier();
			State = 91;
			Match(T__4);
			State = 92;
			identifier();
			State = 93;
			Match(T__1);
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18048483369943040L) != 0)) {
				{
				{
				State = 94;
				declMember();
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 100;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclMemberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ConstructorAssignContext constructorAssign() {
			return GetRuleContext<ConstructorAssignContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefnContext functionDefn() {
			return GetRuleContext<FunctionDefnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MemberDefnContext memberDefn() {
			return GetRuleContext<MemberDefnContext>(0);
		}
		public DeclMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declMember; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterDeclMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitDeclMember(this);
		}
	}

	[RuleVersion(0)]
	public DeclMemberContext declMember() {
		DeclMemberContext _localctx = new DeclMemberContext(Context, State);
		EnterRule(_localctx, 8, RULE_declMember);
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 102;
				constructorAssign();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103;
				functionDefn();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 104;
				memberDefn();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstructorAssignContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public ConstructorAssignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constructorAssign; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterConstructorAssign(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitConstructorAssign(this);
		}
	}

	[RuleVersion(0)]
	public ConstructorAssignContext constructorAssign() {
		ConstructorAssignContext _localctx = new ConstructorAssignContext(Context, State);
		EnterRule(_localctx, 10, RULE_constructorAssign);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			identifier();
			State = 108;
			Match(T__5);
			State = 109;
			literal();
			State = 110;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDefnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FunctionDefnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDefn; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterFunctionDefn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitFunctionDefn(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDefnContext functionDefn() {
		FunctionDefnContext _localctx = new FunctionDefnContext(Context, State);
		EnterRule(_localctx, 12, RULE_functionDefn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			identifier();
			State = 113;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberDefnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PredefinedTypeContext predefinedType() {
			return GetRuleContext<PredefinedTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public MemberDefnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memberDefn; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterMemberDefn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitMemberDefn(this);
		}
	}

	[RuleVersion(0)]
	public MemberDefnContext memberDefn() {
		MemberDefnContext _localctx = new MemberDefnContext(Context, State);
		EnterRule(_localctx, 14, RULE_memberDefn);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			predefinedType();
			State = 116;
			identifier();
			State = 117;
			Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LambdaprimaryContext : ParserRuleContext {
		public LambdaprimaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lambdaprimary; } }
	 
		public LambdaprimaryContext() { }
		public virtual void CopyFrom(LambdaprimaryContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LambdaConstBoolContext : LambdaprimaryContext {
		public IToken c;
		public LambdaConstBoolContext(LambdaprimaryContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterLambdaConstBool(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitLambdaConstBool(this);
		}
	}
	public partial class LambdaConstIntContext : LambdaprimaryContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(ChessVCParser.INTEGER, 0); }
		public LambdaConstIntContext(LambdaprimaryContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterLambdaConstInt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitLambdaConstInt(this);
		}
	}
	public partial class LambdaIDContext : LambdaprimaryContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public LambdaIDContext(LambdaprimaryContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.EnterLambdaID(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IChessVCListener typedListener = listener as IChessVCListener;
			if (typedListener != null) typedListener.ExitLambdaID(this);
		}
	}

	[RuleVersion(0)]
	public LambdaprimaryContext lambdaprimary() {
		LambdaprimaryContext _localctx = new LambdaprimaryContext(Context, State);
		EnterRule(_localctx, 16, RULE_lambdaprimary);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				_localctx = new LambdaIDContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 119;
				identifier();
				}
				break;
			case T__7:
				_localctx = new LambdaConstBoolContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 120;
				((LambdaConstBoolContext)_localctx).c = Match(T__7);
				}
				break;
			case T__8:
				_localctx = new LambdaConstBoolContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 121;
				((LambdaConstBoolContext)_localctx).c = Match(T__8);
				}
				break;
			case INTEGER:
				_localctx = new LambdaConstIntContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 122;
				Match(INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
